# ds-native-webclient

./: .gitignore  .gitmodules  3dtiAudioToolkit.cmake  CMakeLists.txt  HOWTO.md  README.md  build_macos.sh  build_webrtc.sh  build_win.bat  conanfile.py  conanfile.txt  debug_macos.sh  debug_xcode.sh  forms.fbp  iwyu.out  msys2_mingw  resources.qrc
.github/workflows/: build.yml  macos.yml  nightly-macos.yml  nightly-ubuntu.yml  nightly-windows.yml  release-macos.yml  release-ubuntu.yml  release-windows.yml  ubuntu.yml  windows-vs2019.yml  windows.yml
App/: CMakeLists.txt  Digital Stage Connector.entitlements  Info.plist.in  MacOSXBundleInfo.plist.in  Packaging_DMGSetup.scpt  forms.fbp  resources.qrc  resources.rc
App/assets/: logo-dark.tiff  logo.tiff
App/i18n/: DigitalStage_de.ts  DigitalStage_fr.ts
App/src/: App.cpp  App.h  KeyStore.cpp  KeyStore.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  TaskBarIcon.cpp  TaskBarIcon.h  TrayIcon.cpp  TrayIcon.h  main.cpp
App/src/forms/: UI.cpp  UI.h
App/src/utils/: macos.h  macos_internal.h  macos_internal.mm
Cli/: CMakeLists.txt
Cli/src/: RemoteAuthService.cpp  RemoteAuthService.h  auth_cli.h  main.cpp
Core/: CMakeLists.txt
Core/cmake/: Config.cmake.in
Core/src/: Client.cpp  Client.h
Core/src/audio/: AudioIO.cpp  AudioIO.h  AudioMixer.h  AudioMixer.tpp  AudioRenderer.h  AudioRenderer.tpp  MiniAudioIO.cpp  MiniAudioIO.h  RtAudioIO.cpp  RtAudioIO.h
Core/src/utils/: CMRCFileBuffer.h  CircularQueue.h  RingBuffer.h  ServiceDiscovery.h  TBBRingBuffer.h  conversion.h  cp1252_to_utf8.h  miniaudio.h
Core/src/webrtc/: ConnectionService.cpp  ConnectionService.h  PeerConnection.cpp  PeerConnection.h
Service/: CMakeLists.txt
Service/src/: AuthIO.h  RemoteAuthService.cpp  auth_cli.h  main.cpp
SwiftApp/: CMakeLists.txt  ContentView.swift  appApp.swift
build-debug/: CMakeCache.txt.prev  LibDataChannelConfigVersion.cmake  LibJuiceConfigVersion.cmake
cmake/: CodeSign.cmake  FetchWebRTC.cmake  MacOSXBundleInfo.plist.in  Packaging_DMGSetup.scpt  rtc_export_template.h.patch
cmake/modules/: FindEigen3.cmake  FindJack.cmake
i18n/: DigitalStage_de.ts  DigitalStage_fr.ts
src/: Client.cpp  Client.h  auth.cpp  main.cpp  main_app.cpp  main_cli.cpp  main_headless.cpp
src/app/: App.cpp  App.h  KeyStore.cpp  KeyStore.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  TrayIcon.cpp  TrayIcon.h
src/audio/: AudioIO.cpp  AudioIO.h  AudioMixer.h  AudioMixer.tpp  AudioRenderer.h  AudioRenderer.tpp  MiniAudioIO.cpp  MiniAudioIO.h  RtAudioIO.cpp  RtAudioIO.h
src/auth/: AuthIO.h  RemoteAuthService.cpp  RemoteAuthService.h  auth_cli.h
src/core/: Client.cpp  Client.h
src/core/audio/: AudioIO.cpp  AudioIO.h  AudioMixer.h  AudioMixer.tpp  AudioRenderer.h  AudioRenderer.tpp  MiniAudioIO.cpp  RingBuffer.h  RtAudioIO.cpp  RtAudioIO.h
src/core/utils/: CMRCFileBuffer.h  CircularQueue.h  conversion.h  miniaudio.h
src/core/webrtc/: ConnectionService.cpp  ConnectionService.h  PeerConnection.cpp  PeerConnection.h
src/gui/: App.cpp  App.h  Dummy.cpp  Dummy.h  KeyStore.cpp  KeyStore.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  TrayIcon.cpp  TrayIcon.h
src/gui/utils/: macos.h
src/old/audio/: AudioMixer.cpp  AudioMixer.h  AudioProvider.cpp  AudioProvider.h  AudioService.cpp  AudioService.h
src/old/naudio/: AudioIO.cpp  AudioIO.h  AudioMixer.cpp  AudioMixer.h  IAudioIO.h
src/old/provider/: SoundCardsProvider.cpp  SoundCardsProvider.h
src/old/webrtc/: PeerHandler.cpp  PeerHandler.h  WebRTCPeerConnection.cpp  WebRTCPeerConnection.h
src/utils/: CMRCFileBuffer.h  conversion.h  cp1252_to_utf8.h  macos.h  macos_internal.h  ringbuffer.h  thread.h
src/webrtc/: ConnectionService.cpp  ConnectionService.h  PeerConnection.cpp
